--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,11 @@
         "src": "https://avatars1.githubusercontent.com/u/51515182?s=200&v=4",
         "sizes": "192x192",
         "type": "image/png"
+      },
+      {
+        "src": "https://avatars1.githubusercontent.com/u/51515182?s=200&v=4",
+        "sizes": "512x512",
+        "type": "image/png"
       }
     ]
   }
